[gd_scene load_steps=28 format=3 uid="uid://d4cef2i7y7o66"]

[ext_resource type="Script" uid="uid://c6f3mq7ksh2tk" path="res://weapon/bullet type/explosion bullet/explosion_bullet_type.gd" id="1_gips4"]
[ext_resource type="Texture2D" uid="uid://bnjm2tdy0sqx4" path="res://Art/weapon/bullet.png" id="2_ahe44"]
[ext_resource type="Script" uid="uid://bv1oeapcr5rb1" path="res://Scripts/extendables/hurtbox.gd" id="3_3fhyi"]
[ext_resource type="Texture2D" uid="uid://tdq06ad8y50h" path="res://Art/effect/201107161308_explosion.webp" id="4_ahe44"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s02y6"]
size = Vector2(13, 7)

[sub_resource type="CircleShape2D" id="CircleShape2D_ms1sd"]
radius = 24.0208

[sub_resource type="RectangleShape2D" id="RectangleShape2D_58hv5"]
size = Vector2(13, 7)

[sub_resource type="Animation" id="Animation_qaahw"]
resource_name = "Explosion"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(3, 3), Vector2(2, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BulletHitbox/Exlosion_Shape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Explosion"]
}

[sub_resource type="Animation" id="Animation_esklw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BulletHitbox/Exlosion_Shape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Explosion"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gwp1t"]
_data = {
&"Explosion": SubResource("Animation_qaahw"),
&"RESET": SubResource("Animation_esklw")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_ahe44"]
atlas = ExtResource("4_ahe44")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fhyi"]
atlas = ExtResource("4_ahe44")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s02y6"]
atlas = ExtResource("4_ahe44")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_58hv5"]
atlas = ExtResource("4_ahe44")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ms1sd"]
atlas = ExtResource("4_ahe44")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qaahw"]
atlas = ExtResource("4_ahe44")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_esklw"]
atlas = ExtResource("4_ahe44")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwp1t"]
atlas = ExtResource("4_ahe44")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxjgv"]
atlas = ExtResource("4_ahe44")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xb2ku"]
atlas = ExtResource("4_ahe44")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mn8s5"]
atlas = ExtResource("4_ahe44")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_68nwu"]
atlas = ExtResource("4_ahe44")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3p7uh"]
atlas = ExtResource("4_ahe44")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hniua"]
atlas = ExtResource("4_ahe44")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aafit"]
atlas = ExtResource("4_ahe44")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qlaj"]
atlas = ExtResource("4_ahe44")
region = Rect2(96, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_e7xeg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahe44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fhyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s02y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58hv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ms1sd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qaahw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_esklw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwp1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxjgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xb2ku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mn8s5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68nwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3p7uh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hniua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aafit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qlaj")
}],
"loop": false,
"name": &"Explosion",
"speed": 20.0
}]

[node name="ExplosionBulletType" type="CharacterBody2D"]
scale = Vector2(3, 3)
script = ExtResource("1_gips4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ahe44")
region_enabled = true
region_rect = Rect2(416, 64, 16, 16)

[node name="Floor_Collision" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_s02y6")

[node name="BulletHitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128
script = ExtResource("3_3fhyi")
metadata/_custom_type_script = "uid://bv1oeapcr5rb1"

[node name="Exlosion_Shape" type="CollisionShape2D" parent="BulletHitbox"]
shape = SubResource("CircleShape2D_ms1sd")
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletHitbox"]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_58hv5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_gwp1t")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_e7xeg")
animation = &"Explosion"
autoplay = "Explosion"
frame = 15
frame_progress = 1.0

[connection signal="hit_enemy" from="BulletHitbox" to="." method="on_enemy_hit"]
